--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,21 @@
 
 <html>
     <head>
-        <title>Джанго блог</title>
-        <link href="https://fonts.googlepis.com/css?family=Sourse+Sans+Pro:400" rel="\stylesheet">
+        <title>Django blog</title>
+        <link href="https://fonts.googlepis.com/css?family=Sourse+Sans+Pro:400" rel\="stylesheet">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     </head>
+
     <body>
+      <div class="container">
         <header>
-            <h1><a href="/">Джанго блог</a></h1>
+          <div class="nav-left">
+            <h1><a href="/">Django blog</a></h1>
+          </div>
+          <div class="nav-right">
+            <a href="{% url 'post_new' %}">+ New Blog Post</a>
+          </div>
         </header>
-        <div class="container">
             {% block content %}
             {% endblock content %}
         </div>
